--- a/index.html
+++ b/index.html
@@ -261,16 +261,21 @@
                             <i class="bi bi-file-earmark-text"></i> Reports
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#legislation" data-bs-toggle="tab">
-                            <i class="bi bi-journal-bookmark"></i> Legislation
-                        </a>
-                    </li>
-                    <li class="nav-item mt-4">
-                        <a class="nav-link" href="#settings" data-bs-toggle="tab">
-                            <i class="bi bi-gear"></i> Settings
-                        </a>
-                    </li>
+<li class="nav-item">
+    <a class="nav-link" href="#legislation" data-bs-toggle="tab">
+        <i class="bi bi-journal-bookmark"></i> Legislation
+    </a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="UserGuide.html" target="_blank">
+        <i class="bi bi-question-circle"></i> User Guide
+    </a>
+</li>
+<li class="nav-item mt-4">
+    <a class="nav-link" href="#settings" data-bs-toggle="tab">
+        <i class="bi bi-gear"></i> Settings
+    </a>
+</li>
                 </ul>
             </div>
 
