Update User Guide link to open in new tab

--- a/index.html
+++ b/index.html
@@ -592,15 +592,14 @@
                             <span>Legislation</span>
                         </button>
                     </li>
-                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="alert('User Guide would open here'); return false;" 
-                           rel="noopener noreferrer" aria-label="User Guide">
-                            <i class="bi bi-question-circle" aria-hidden="true"></i>
-                            <span>User Guide</span>
-                            <i class="bi bi-box-arrow-up-right ms-auto" aria-hidden="true" style="font-size: 0.8rem;"></i>
-                        </a>
-                    </li>
+    <a class="nav-link" href="UserGuide.html" target="_blank" 
+       rel="noopener noreferrer" aria-label="User Guide (opens in new tab)">
+        <i class="bi bi-question-circle" aria-hidden="true"></i>
+        <span>User Guide</span>
+        <i class="bi bi-box-arrow-up-right ms-auto" aria-hidden="true" style="font-size: 0.8rem;"></i>
+    </a>
+</li>
                     
                     <li class="nav-item mt-4" role="presentation">
                         <button class="nav-link" id="settings-tab" data-bs-toggle="tab" 
